@@ -1,11 +1,14 @@
-<form action="/messages/{{ message.id }}/like" method="POST" style="z-index:999">
+<form
+    action="/messages/{{ message.id }}/like"
+    method="POST"
+    style="z-index:999">
     {{ g.csrf_form.hidden_tag() }}
     {% if message in g.user.liked_messages %}
-    <button>
+    <button >Like/Unlike
         <i class="bi bi-star-fill"></i>
-    </button>
+    </button >
     {% else %}
-    <button>
+    <button>Like/Unlike
         <i class="bi bi-star"></i>
     </button>
     {% endif %}
