@@ -52,7 +52,11 @@
           </li>
           <li class="stat">
             <p class="small">Likes</p>
-            <h4>TBD</h4>
+            <h4>
+              <a href="/users/{{ user.id }}/followers">
+                {{ user.liked_messages | length }}
+              </a>
+            </h4>
           </li>
 
           <li class="ms-auto">
