@@ -20,8 +20,8 @@
               {{ message.timestamp.strftime('%d %B %Y') }}
             </span>
         <p>{{ message.text }}</p>
-        {% include "_like-form.html"  %}
       </div>
+      {% include "_like-form.html"  %}
     </li>
 
     {% endfor %}
